# gridhouse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml
dags/: grindhouse_pipeline.py
extractors/: catalog.py  common.py  hh.py  linkedin.py  tg.py
jars/: README.md
notebooks/: explore.ipynb
scripts/: export_vacancies.py  gen_session.py  init_catalog.py  notify_vacancies.py  score_vacancies.py  sync_hr_events.py  verify.py
transformations/: dbt_project.yml  pip-constraints.txt  profiles.yml  run.py  run_dbt.py  spark_session.py  sqlmesh.yaml
transformations/macros/: generate_schema_name.sql
transformations/models/: _sources.yaml  sources.yml
transformations/models/business_vault/: bv_company.sql  bv_vacancy_score.sql  bv_vacancy_status.sql  schema.yml
transformations/models/gold/: hub_company.sql  hub_contact.sql  hub_vacancy.sql  link_vacancy_company.sql  link_vacancy_contact.sql  sal_vacancy.sql  sat_company_details.sql  sat_vacancy_details.sql  sat_vacancy_source.sql  schema.yml
transformations/models/mart/: mart_vacancies.sql  schema.yml
transformations/models/silver/: hh_vacancies.sql  linkedin_posts.sql  schema.yml  tg_messages.sql  vacancies.sql
transformations/tests/: conftest.py  test_dedup.py
trino/: entrypoint.sh
trino/etc/: config.properties
trino/etc/catalog/: iceberg.properties.template  iceberg_dev.properties.template
